--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
-        "livewire/livewire": "^3.0@beta",
+        "illuminate/support": "^10.0",
+        "livewire/livewire": "^3.0",
         "reedware/laravel-relation-joins": "^4.0",
         "spatie/simple-excel": "^3.0"
     },
