--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "php": "^8.0",
         "illuminate/support": "^10.0||^11.0",
         "livewire/livewire": "^3.0",
-        "reedware/laravel-relation-joins": "^4.0",
+        "reedware/laravel-relation-joins": "^4.0||^6.0",
         "spatie/simple-excel": "^3.0"
     },
     "require-dev": {
